there is now a handlers_config_path, we should support it

--- a/templates/default/diamond.conf.erb
+++ b/templates/default/diamond.conf.erb
@@ -28,6 +28,9 @@ collectors_config_path = <%= @collectors_config_path %>
 # Interval to reload collectors
 collectors_reload_interval = <%= @reload_interval %>
 
+# Directory to load handler configs from
+handlers_config_path = /etc/diamond/handlers/
+
 ################################################################################
 ### Options for handlers
 [handlers]
