--- a/templates/default/generic_collector_config.conf.erb
+++ b/templates/default/generic_collector_config.conf.erb
@@ -1,4 +1,4 @@
 ### Options for <%= @name %>
-<% @options.each_pair do |k,v| %>
-<%= k %> = <%= v %>
-<% end %>
+<% output_sections(@options).each do |l| -%>
+<%= l %>
+<% end -%>
